fix text-align collapses

--- a/src/components/collapse/Collapse.module.scss
+++ b/src/components/collapse/Collapse.module.scss
@@ -9,6 +9,16 @@
   }
 }
 
+.section {
+  text-align: unset;
+}
+
+@media screen and (max-width: 899px) {
+  .section {
+    text-align: justify;
+  }
+}
+
 
 /*
 .light {
